# maxdiff

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  MaxDiff_Data_Analyzer_v2-1.py  README.md  pyproject.toml  requirements-dev.txt  requirements-hb.txt  requirements.txt
.claude/: launch.json
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  RELEASE.md  index.html
docs/analysis/: index.html
docs/design/: index.html
docs/wheels/3.0.0/: maxdiff-3.0.0-py3-none-any.whl
docs/wheels/3.0.0.dev0/: maxdiff-3.0.0.dev0-py3-none-any.whl
docs/wheels/3.0.1/: maxdiff-3.0.1-py3-none-any.whl
docs/wheels/3.0.2/: maxdiff-3.0.2-py3-none-any.whl
docs/wheels/3.0.3/: maxdiff-3.0.3-py3-none-any.whl
pyinstaller/: build_instructions.md
scripts/: vendor_pyodide.py
src/: MaxDiff_Data_Analyzer_v2-1.py
src/maxdiff/: __init__.py  _version.py  bootstrap.py  colors.py  correlation.py  count.py  display.py  formats.py  hb.py  io.py  plotting.py
tests/: conftest.py
tests/e2e/: conftest.py  test_csv_parser.py  test_design_tool_balance.py  test_render_and_tabs.py
tests/golden/: README.md  conftest.py  test_count_analysis_goldens.py  test_hb_goldens.py
tests/golden/expected/: bootstrap_observed_scores_small.csv  display_statistics_medium.csv  display_statistics_small.csv  hb_credible_interval_widths_small.csv  hb_population_scores_small.csv  observed_percentages_medium.csv  observed_percentages_small.csv  scores_no_ci_medium.csv  scores_no_ci_small.csv
tests/helpers/: legacy_loader.py  synthetic_data.py
tests/integration/: test_full_pipeline.py
tests/property/: test_synthetic_data_invariants.py
tests/statistical/: test_bootstrap_coverage.py  test_hb_recovery.py
tests/unit/: test_bootstrap.py  test_count_analysis.py  test_format_detector.py  test_hb_input_validation.py  test_helpers.py  test_io.py  test_plotting.py  test_pyodide_sri.py  test_pyodide_vendor.py  test_smoke.py  test_synthetic_data.py
