[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "maxdiff"
description = "Analysis library for MaxDiff (best-worst scaling) studies"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10,<3.13"
authors = [{ name = "Carl J" }]
keywords = ["maxdiff", "best-worst", "survey", "choice-modeling"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dynamic = ["version"]
dependencies = [
    # Lower bounds chosen so the wheel is installable into Pyodide
    # 0.24.x. Pyodide 0.24.1 ships pandas 1.5.3, matplotlib 3.5.2,
    # numpy 1.25.x; we need our wheel to satisfy those exact installs.
    # The desktop install uses whatever pip resolves, which in
    # practice is much newer. The maxdiff source uses only pandas 1.5+
    # / matplotlib 3.5+ APIs. If we ever bump Pyodide, revisit these
    # bounds and rebuild the wheel.
    "pandas>=1.5,<3.0",
    "numpy>=1.24,<3.0",
    "matplotlib>=3.5,<4.0",
]

[project.optional-dependencies]
hb = [
    "jax>=0.4",
    "numpyro>=0.13",
]
desktop = [
    "customtkinter>=5.2",
    "seaborn>=0.12",
    "openpyxl>=3.1",
]

[project.urls]
Homepage = "https://milkywaycj.github.io/maxdiff/"
Repository = "https://github.com/milkywaycj/maxdiff"
Issues = "https://github.com/milkywaycj/maxdiff/issues"

[tool.setuptools.dynamic]
version = { attr = "maxdiff._version.__version__" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["maxdiff*"]

# ---------------------------------------------------------------------------
# Developer tooling configuration follows.
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
    "--showlocals",
    "--tb=short",
]
xfail_strict = true
filterwarnings = [
    # Pytest prepends each filter entry to Python's filter list, so the
    # LAST entry in this list is consulted FIRST. The catch-all "error"
    # therefore comes FIRST (added first, ends up at the back of the
    # active filter list, lowest priority), and specific overrides are
    # listed BELOW it (added later, end up at the front, win first).

    # Default policy: every warning becomes an error. Forces a
    # deliberate decision when something new starts warning, instead of
    # silent rot.
    "error",

    # Matplotlib font configuration uses an older pyparsing API at
    # import time (parseString, resetCache, enablePackrat, etc.). The
    # message format is uniformly "'<camelCase>' deprecated - use
    # '<snake_case>'". Match that whole family with one pattern. Out of
    # our control; matplotlib upstream tracks it.
    "ignore:'[A-Za-z]+' deprecated - use '[A-Za-z_]+':DeprecationWarning",

    # pandas 2.x deprecation triggered by df.replace(dict) inside the
    # current bootstrap_analysis(). Scheduled for fix in Phase 4 (perf
    # cleanup, switch to .map() / np.searchsorted).
    "ignore:.*Downcasting.*replace.*:FutureWarning",
    "ignore:.*replace.*deprecated.*:DeprecationWarning",

    # JAX may emit a DeprecationWarning about jax.config.update on some
    # versions when we set the platform name to CPU. Supported but warns.
    "ignore:.*jax.config.*:DeprecationWarning",

    # Matplotlib emits "Glyph N missing from current font" as a
    # UserWarning when the default font lacks a code point that's
    # neither in our labels nor anywhere we control. Most commonly
    # triggered by automatic title-rendering paths under concurrent
    # worker-thread invocation. Cosmetic; not a behavior bug.
    "ignore:Glyph .* missing from current font:UserWarning",
]
markers = [
    "slow: marks tests that take more than a couple of seconds (deselect with -m 'not slow')",
    "hb: marks tests that require jax/numpyro to be installed (skipped automatically when unavailable)",
    "statistical: marks Monte Carlo / coverage-based correctness tests",
    "golden: marks pinned-output regression tests",
    "integration: marks tests that exercise more than one module together",
    "e2e: marks browser-driven end-to-end tests",
]

[tool.coverage.run]
branch = true
source = ["src", "tests/helpers"]
omit = [
    "tests/*",
    "*/conftest.py",
]

[tool.coverage.report]
exclude_also = [
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "pragma: no cover",
]
show_missing = true
skip_covered = false
precision = 1

[tool.coverage.html]
directory = "build/coverage-html"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# Conservative initial rule set. We will tighten this as we refactor.
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",  # line too long: enforced by formatter, not lint
    "B008",  # function call in default argument (common pattern in matplotlib)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]  # assert False is fine in tests
"src/MaxDiff_Data_Analyzer_v2-1.py" = [
    "B", "SIM", "UP",  # legacy entry point; pre-Phase-3 style preserved
    "RUF001",  # times-sign in user-facing strings is intentional
    "RUF005",  # list concatenations preserved for readability
]
"src/maxdiff/display.py" = ["RUF001"]  # status emojis use box-drawing/symbol chars on purpose

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
